Splitting static-admin into two login options: local / super-admin